--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,17 +13,24 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
+    <!------------ font Embed-code ================-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/all.min.js"></script>
 
     <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container">
-            <a class="navbar-brand text-uppercase" href="#">video games</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#main" aria-controls="main"
-                aria-expanded="false" aria-label="Toggle navigation">
+            <div class="d-flex align-items-center gap-4 fa-2x">
+                <i class="fa-solid fa-gamepad text-light "></i>
+                <a class="navbar-brand text-uppercase" href="#">video games</a>
+            </div>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main"
+                aria-controls="main" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fa-solid fa-bars"></i>
             </button>
             <div class="collapse navbar-collapse" id="main">
@@ -50,13 +58,30 @@
             </div>
         </div>
     </nav>
+    <!-- =============== start = section ========================== -->
+    <section class="py-5">
+        <div class="group-img d-flex">
+            <img src="images/gow-ragna-review-blog-1667470875999.jpg" alt="">
+            <img src="images/s5-726a305ad516ab19d4e84e3d1664b37a.webp" alt="">
+            <img src="images/2048.jpeg" alt="">
+            <img src="images/horizon-zero-dawn-machines.avif" alt="">
+            <img src="images/ss_857b4aaf3c10b2a886d60f029f32b2f86d968311.1920x1080.jpg" alt="">
+            <div class="txt-section position-absolute">
+                <h1 class="text-light fw-bold">Playing video games are so much fun for everyone</h1>
+                <div class="d-flex justify-content-center mt-4">
+                    <a class="btn main-btn rounded-pill text-uppercase fw-bold play-now" href="#"> Play Now</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- =============== end = section ========================== -->
 
 
     <div class="school text-center py-5">
         <div class="container">
             <div class="title-school">
-                <i class="fa-brands fa-fantasy-flight-games games"></i>
-                <h2 class="my-4 text-light text-uppercase ">video games</h2>
+                <!-- <i class="fa-brands fa-fantasy-flight-games games"></i>
+                <h2 class="my-4 text-light text-uppercase ">video games</h2> -->
 
                 <ul class="choose-game list-unstyled mb-5  d-flex justify-content-center align-items-center">
                     <li class="rounded-pill  active">All</li>
@@ -125,7 +150,8 @@
                     <div class="game-name rounded-3 mb-3 ">
                         <img class="img-fluid rounded-3" src="images/wallpaperflare.com_wallpaper (3).jpg" alt="">
                         <h2 class="p-3 text-uppercase">HogWarts legacy</h2>
-                        <blockquote class="p-2">this game is full of fiction , and it looks like Harry Potter</blockquote>
+                        <blockquote class="p-2">this game is full of fiction , and it looks like Harry Potter
+                        </blockquote>
                         <div class=" py-2 px-3 d-flex justify-content-between align-items-center">
                             <div class="price-game">Price</div>
                             <span class=" rounded-3 py-1 px-2 fw-bold">$20</a>
@@ -136,7 +162,8 @@
                     <div class="game-name rounded-3 mb-3 ">
                         <img class="img-fluid rounded-3 " src="images/wallpaperflare.com_wallpaper (4).jpg" alt="">
                         <h2 class="p-3 text-uppercase">the witcher</h2>
-                        <blockquote class="p-2">this game is full of fiction , and it looks like Harry Potter</blockquote>
+                        <blockquote class="p-2">this game is full of fiction , and it looks like Harry Potter
+                        </blockquote>
                         <div class=" py-2 px-3 d-flex justify-content-between align-items-center">
                             <div class="price-game">Price</div>
                             <span class=" rounded-3 py-1 px-2 fw-bold">$20</a>
@@ -147,7 +174,8 @@
                     <div class="game-name rounded-3 mb-3 ">
                         <img class="img-fluid rounded-3" src="images/wallpaperflare.com_wallpaper (2).jpg" alt="">
                         <h2 class="p-3 text-uppercase">Eden ring</h2>
-                        <blockquote class="p-2">this game is full of fiction , and it looks like Harry Potter</blockquote>
+                        <blockquote class="p-2">this game is full of fiction , and it looks like Harry Potter
+                        </blockquote>
                         <div class=" py-2 px-3 d-flex justify-content-between align-items-center">
                             <div class="price-game">Price</div>
                             <span class=" rounded-3 py-1 px-2 fw-bold">$20</a>
@@ -158,7 +186,8 @@
                     <div class="game-name rounded-3 mb-3 ">
                         <img class="img-fluid rounded-3" src="images/wallpaperflare.com_wallpaper (8).jpg" alt="">
                         <h2 class="p-3 text-uppercase">spiderman</h2>
-                        <blockquote class="p-2">this game is full of fiction , and it looks like Harry Potter</blockquote>
+                        <blockquote class="p-2">this game is full of fiction , and it looks like Harry Potter
+                        </blockquote>
                         <div class=" py-2 px-3 d-flex justify-content-between align-items-center">
                             <div class="price-game">Price</div>
                             <span class=" rounded-3 py-1 px-2 fw-bold">$20</a>
@@ -176,7 +205,9 @@
                     <img class="img-fluid" src="images/PS5_logo.png" alt="">
                 </div>
                 <div class="col-sm-6 col-md-4 col-lg-2">
-                    <img class="img-fluid" src="images/png-transparent-steamworld-dig-2-video-game-opus-rocket-of-whispers-pc-game-others-miscellaneous-text-trademark-removebg-preview.png" alt="">
+                    <img class="img-fluid"
+                        src="images/png-transparent-steamworld-dig-2-video-game-opus-rocket-of-whispers-pc-game-others-miscellaneous-text-trademark-removebg-preview.png"
+                        alt="">
                 </div>
                 <div class="col-sm-6 col-md-4 col-lg-2">
                     <img class="img-fluid" src="images/xbox-2.svg" alt="">
@@ -188,7 +219,9 @@
                     <img class="img-fluid" src="images/PS5_logo.png" alt="">
                 </div>
                 <div class="col-sm-6 col-md-4 col-lg-2">
-                    <img class="img-fluid" src="images/png-transparent-steamworld-dig-2-video-game-opus-rocket-of-whispers-pc-game-others-miscellaneous-text-trademark-removebg-preview.png" alt="">
+                    <img class="img-fluid"
+                        src="images/png-transparent-steamworld-dig-2-video-game-opus-rocket-of-whispers-pc-game-others-miscellaneous-text-trademark-removebg-preview.png"
+                        alt="">
                 </div>
             </div>
         </div>
@@ -270,7 +303,8 @@
                             <h4 class="my-4 text-light text-uppercase ">video games</h4>
                         </div>
                         <p class=" ">
-                            Pellentesque in ipsum id orci porta dapibus. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus.
+                            Pellentesque in ipsum id orci porta dapibus. Vivamus magna justo, lacinia eget consectetur
+                            sed, convallis at tellus.
                         </p>
                         <div class="copyright">
                             Created By <span class="text-info bg-transparent">Graphberry</span>
@@ -312,32 +346,33 @@
                     <ul class="d-flex list-unstyled gap-3">
                         <li>
                             <a href="#" class="d-block text-light" aria-label="Facebook">
-                                <i class="fa-brands fa-facebook rounded-circle p-2 facebook"  ></i>
+                                <i class="fa-brands fa-facebook rounded-circle p-2 facebook"></i>
                             </a>
                         </li>
                         <li>
                             <a href="#" class="d-block text-light" aria-label="Twitter">
-                                <i class="fa-brands fa-x-twitter rounded-circle p-2 twitter" ></i>
+                                <i class="fa-brands fa-x-twitter rounded-circle p-2 twitter"></i>
 
                             </a>
                         </li>
                         <li>
                             <a href="#" class="d-block text-light" aria-label="Linkedin">
-                                <i class="fa-brands fa-linkedin rounded-circle p-2 linkedin" ></i>
+                                <i class="fa-brands fa-linkedin rounded-circle p-2 linkedin"></i>
                             </a>
                         </li>
                         <li>
                             <a href="#" class="d-block text-light" aria-label="Dribble">
-                                <i class="fa-brands fa-dribbble rounded-circle p-2 dribble" ></i>
+                                <i class="fa-brands fa-dribbble rounded-circle p-2 dribble"></i>
                             </a>
                         </li>
                     </ul>
                 </div>
             </div>
         </div>
-    </div> 
+    </div>
 
-    
+
 
 </body>
+
 </html>
